# OpenDPP

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 56d5edb9b8bb_translation_cache_table.py  68567d944cf2_initial_products_and_dpp_records.py  6c830d8ad74e_suppliers_and_verifiable_credentials.py  d5d7cfc145e8_anchor_proofs.py
api/src/opendpp/: cli.py  config.py  content_negotiation.py  db.py  main.py  validation.py
api/src/opendpp/anchor/: __init__.py  abi.py  service.py
api/src/opendpp/jsonld/: context.py
api/src/opendpp/llm/: __init__.py  anthropic_provider.py  mock.py  prompts.py  provider.py
api/src/opendpp/models/: __init__.py  anchor_proof.py  dpp.py  product.py  supplier.py  translation_cache.py  verifiable_credential.py
api/src/opendpp/routers/: anchor.py  chat.py  digital_link.py  dpp.py  qr.py  translate.py  validate_semantic.py  vc.py
api/src/opendpp/schemas/: __init__.py  dpp.py
api/src/opendpp/vc/: __init__.py  issuer.py  keys.py  verifier.py
api/tests/: conftest.py  test_anchor.py  test_dpp_crud.py  test_health.py  test_llm.py  test_qr.py  test_resolver.py  test_validation.py  test_vc.py
contracts/: .gitignore  Dockerfile  hardhat.config.ts  package.json  pnpm-lock.yaml
contracts/contracts/: OpenDPPAnchor.sol
contracts/scripts/: deploy.ts  run-and-deploy.sh
schemas/: textile-dpp.v1.json
seed/: load_seed.py  products.json
web/: .env.local.example  Dockerfile  package.json  pnpm-lock.yaml
web/app/: globals.css  (+3 more)
(+20 files in other folders)
