[project]
name = "opendpp"
version = "0.1.0"
description = "OpenDPP reference API — GS1 Digital Link resolver and Digital Product Passport service."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Nader Bennour" }
]
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
    "greenlet>=3.5.0",
    "qrcode[pil]>=8.2",
    "anthropic>=0.102.0",
    "sse-starlette>=3.4.4",
]

[project.scripts]
opendpp = "opendpp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.8",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: FastAPI uses Depends()/Query() as defaults — that's the intended pattern.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
